--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^5.1.3",
     "popper": "^1.0.1",
     "primeflex": "^3.2.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
